--- a/assets/css/diag-resp-style.css
+++ b/assets/css/diag-resp-style.css
@@ -45,7 +45,8 @@
     width:100%;
     height:100%;
     overflow:hidden;
-    display:block;
+    display: flex;        /* add this in shared CSS */
+    flex-direction: column;
     border-radius: 0px;
 }
 
@@ -103,21 +104,26 @@
 }
 
 /* Responsive iframe wrapper */
-.embed-wrap{
+.embed-wrap {
     position: relative;
+    padding-top: 0;
+    flex: 1;
     width: 100%;
-    padding-top: 56.25%; /* 16:9 */
+    min-height: 0; /* prevent flex overflow */
 }
-.embed{
-    position: absolute;
-    top:0;left:0;right:0;bottom:0;width:100%;height:100%;border:0;
+
+.embed {
+    position: static;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .masked-image{
     display:block;
     width:100%;
-    height:100%;
-    min-height:220px;
+    min-height: unset;
+    flex:1;
     object-fit:cover;
 }
 
